2007-08-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* vc-rcs.el (vc-rcs-annotate-command):
	Fix bug introduced 2007-07-18 (revision 1.51):
	Add back :vc-annotate-prefix propertization.

2007-08-20  Andreas Schwab  <schwab@suse.de>

	* mail/rmail.el (rmail-autodetect): Doc fix.

2007-08-19  Juri Linkov  <juri@jurta.org>

	* startup.el (normal-splash-screen): Add more links.

2007-08-19  Juri Linkov  <juri@jurta.org>

	* startup.el (splash-screen-keymap): Rename from `fancy-splash-keymap'
	because it's common to both types of splash screen: fancy and normal.
	Bind SPC to scroll-up, DEL to scroll-down and `q' to exit-splash-screen.
	(exit-splash-screen): Rename from `fancy-splash-quit'.
	Use `quit-window' instead of `kill-buffer'.
	(fancy-splash-head): Use make-button to insert GNU image link.
	(fancy-splash-screens, normal-splash-screen): Rename " About GNU
	Emacs" to "*About GNU Emacs*", and " GNU Emacs" to "*GNU Emacs*".
	(normal-splash-screen): Put "Browse manuals" on the same line with
	"Emacs manual".  Remove descriptions from "Useful tasks" and put
	all links in two columns on two lines.

2007-08-19  Michael Kifer  <kifer@cs.stonybrook.edu>

	* viper.el (viper-remove-hooks): remove some additional viper hooks
	when the user calls viper-go-away.
	(viper-go-away): restore the default of default-major-mode.
	Save the value of default-major-mode before vaperization.

	* viper-cmd.el: Replace error "" with "Viper bell".

	* viper-ex.el: Replace error "" with "Viper bell".

	* ediff-util.el (ediff-make-temp-file): use the coding system of the
	buffer for which file is created.

2007-08-19  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (custom-deps, finder-data, autoloads, recompile)
	(progmodes/cc-mode.elc, mh-e/mh-loaddefs.el): Use $(emacs) rather
	than $(EMACS), so that EMACSLOADPATH is set.  Prevents any system
	shadow files messing up the compilation.

2007-08-18  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/eldoc.el (eldoc-get-fnsym-args-string): Add doc